---
source: crates/walrus-semantics/src/ty.rs
expression: types
---
InferenceResult {
    type_of_expr: {
        0: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
        1: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
        2: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
    },
    type_of_pat: {
        0: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
    },
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App(
                TypeApp {
                    ctor: Int,
                    params: [],
                },
            ),
        },
    },
    diagnostics: [],
}
